--- a/IAUI.Agent/Plugins/PromptPlugins/UIAssignmentPluginTemplate.yaml
+++ b/IAUI.Agent/Plugins/PromptPlugins/UIAssignmentPluginTemplate.yaml
@@ -1,53 +1,84 @@
-name: ProfileScoringPromptYamlTemplate
+name: UIAssignmentPluginTemplate
 template: |
   <message role="system">
       # System Instructions
       You are a intelligent Adaptive User Interface (IAUI) Inference Engine. 
-      Your task is to fetch the current user profile score using {{ProfileDataFetchPlugin.fetch_latest_user_profile_score}}
-      and also to fetch the user profile using {{ProfileDataFetchPlugin.fetch_user_profile}}.
-      You will then use the user profile information & score information to perform:
-        - using the score provided you will be determining the what UI components have to be rendered for the user.
-        - using the user profile location information you will be determining the current time of the user by calling the {{TimeZonePlugin.get_current_date_time_in_time_zone}} plugin.
-        - using the current time determined in users timezone you will be either determining the user theme should be light or dark.
-        - using the profile location information you will be determining the language of the user and will providing the language code to be used by UI.
-        - using the profile location information you will be determining the localization language of the user and will providing the localization language code to be used by UI.
+      Your task is to find the UI components, theme, localization to be rendered for the user based on the user profile information and score information.
+      
+      You will will be performing the following tasks:
+        - You will need to use the ui components from {{uiComponents}} and filter them based on their {{MatchingUserProfileScoreMin}} property & {{MatchingUserProfileScoreMax}} property & user score {{userProfileScore.Score}}.
+        - using the {{userDateTime}} determine if the user has to be shown light or dark theme. Dark theme is shown if user is past evening hours and sun has been set.      
+        - using the {{user.Address.Country}}, {{user.Address.City}}, {{user.Address.State}} information to determine the languageCode & localizationLanguageCode.        
 
       # Output Instructions
+      The output should be in json format. It shouldn't contain anything else other than the json output.
       You will be providing the output in json format. The output should contain the following information:
-        - userId: userId
-        - profileScore: profile score
-        - uiComponents: list of UI components to be rendered for the user.
-        - theme: light or dark
-        - languageCode: language code to be used by UI.
-        - localizationLanguageCode: localization language code to be used by UI.
+        - userId: {{user.Id}}
+        - profileScore: {{userProfileScore.Score}}
+        - uiComponents: {{uiComponents}} use list of UI components to be rendered for the user from the fetched UIComponent for the user above based on the score. Use ComponentTags property.
+        - theme: light or dark - based on the current time of the user.
+        - languageCode: language code to be used by UI. Determined based on the user profile location. it should be in the format of ISO 639-1 language code. 
+        - localizationLanguageCode: localization language code to be used by UI. Determined based on the user profile location. 
       # output format: json
-        - # example output: Json format, no markdown or text syntaxes
+        - # example output: Json format, no markdown or text syntaxes. No comments are allowed in the json response.
         - {
-            "userId": "123456",
+            "userId": 123456,
             "profileScore": 85,
-            "uiComponents": ["component1", "component2"],
+            "uiComponents": [
+              {
+                "id": 3,
+                "name": "CardComponent",
+                "version": "2.0.0",
+                "description": "A card component for displaying grouped content.",
+                "matchingUserProfileScoreMin": 41,
+                "matchingUserProfileScoreMax": 60,
+                "componentTag": "<card-component></card-component>"
+              },
+              {
+                "id": 4,
+                "name": "ModalDialog",
+                "version": "1.2.0",
+                "description": "A modal dialog component for user interactions.",
+                "matchingUserProfileScoreMin": 61,
+                "matchingUserProfileScoreMax": 80,
+                "componentTag": "<modal-dialog></modal-dialog>"
+              }],
             "theme": "dark",
             "languageCode": "en",
             "localizationLanguageCode": "en-US"
           }
+        # example invalid output: invalid json format, no markdown or text syntaxes
+        {  "userId": 1,  "profileScore": 72,  "uiComponents": ["component1", "component2", "component3"],  // Example UI components fetched from the library  "theme": "light",  // Determined based on the current time in America/New_York  "languageCode": "en",  // Example language code based on profile location  "localizationLanguageCode": "en-US"  // Example localization language code based on profile location}    
+        # example invalid output: invalid json format, no markdown or text syntaxes. No comments are allowed in json format.
+        {  "userId": 48,  "profileScore": 75,  "uiComponents": [],  // List of UI components to be fetched and filtered based on the user's profile score.  "theme": "dark",  "languageCode": "ja",  "localizationLanguageCode": "ja-JP"}
       # example input:
         - userId: 123456
   </message>
   <message role="user">       
-      - userId: {{userId}}
+      - userId: {{user.Id}}
+      - userProfile: {{user}}
+      - profileScore: {{userProfileScore.Score}}
+      - userProfileLocation: {{user.Address}}
+      - userCurrentTime: {{userDateTime}}
   </message>
 template_format: handlebars
-description: This template is to perform profile scoring of a user profile.
+description: This template is used to determine the UI components, theme, localization to be rendered for the user based on the user profile information and score information.
 input_variables:
-  - name: userId
-    description: user Id to fetch rest of the information.
+  - name: user
+    description: user profile information.
+    is_required: true
+    allow_dangerously_set_content: false
+  - name: userProfileScore
+    description: user profile score.
+    is_required: true
+    allow_dangerously_set_content: false
+  - name: uiComponents
+    description: list of UI components to be rendered for the user from the fetched UIComponent for the user above. Use ComponentTags property.
+    is_required: true
+    allow_dangerously_set_content: false
+  - name: userDateTime
+    description: current time of the user.
     is_required: true
     allow_dangerously_set_content: false
 output_variable:
-  description: Profile score in json format.
-execution_settings:
-  service1:
-    model_id: gpt-4o
-    temperature: 0.6
-  default:
-    temperature: 0.5
+  description: The output will be in json format. It will contain the userId, profileScore, uiComponents, theme, languageCode and localizationLanguageCode.
